# wifi-distance-calculator

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  config.json  current_RSSI_Dataset.csv  fingerprint_data.csv  grid_config.json  requirements.txt
data/input/: lio_slam.txt
data/input/distance_estimates/: measured_distance_at_1.csv  measured_distance_at_10.csv  measured_distance_at_2.csv  measured_distance_at_3.csv  measured_distance_at_4.csv  measured_distance_at_5.csv  measured_distance_at_6.csv  measured_distance_at_7.csv  measured_distance_at_8.csv  measured_distance_at_9.csv
data/input/rssi_logs/: rssi_log_at_1.csv  rssi_log_at_10.csv  rssi_log_at_2.csv  rssi_log_at_3.csv  rssi_log_at_4.csv  rssi_log_at_5.csv  rssi_log_at_6.csv  rssi_log_at_7.csv  rssi_log_at_8.csv  rssi_log_at_9.csv
data/input/wifi/: 1716884385366287415.csv  1716884395366195140.csv  1716884405366101824.csv  1716884415366235656.csv  1716884425366173481.csv  1716884435366187084.csv  1716884445366093132.csv  1716884455366106797.csv  1716884465366112561.csv  1716884475366283408.csv  1716884485366272724.csv  1716884495366111269.csv  1716884505366259854.csv  1716884515366220183.csv  1716884525366185851.csv  1716884535366262993.csv  1716884545366193576.csv  1716884555366207778.csv  1716884565366235679.csv  1716884575366746547.csv  1716884585366244827.csv  1716884595366249737.csv  1716884605366278901.csv  1716884615366247770.csv  1716884625366239758.csv  1716884635366247341.csv  1716884645366257953.csv  1716884655366197237.csv  1716884665366237881.csv  1716884675366209754.csv  1716884685366246144.csv  1716884695366228221.csv  1716884705366221929.csv  1716884715366248630.csv
data/output/errors_logDistance/: summary_statistics.csv
data/output/location_errors/: estimation_at_(3,7)v2.csv  estimations_at_(3,7).csv  estimations_at_(4,3).csv  estimations_at_(5,5).csv  estimations_at_(6,3).csv
data/output/location_errors/visualizations/: error_and_statistical_metrics.txt
data/output/map/: ap_positions_ordered.csv  wifi_fingerprinting_dataset.csv
data/output/rssi_analysis/: descriptive_statistics.csv  grouped_statistics.csv  individual_statistics.txt  model_parameters.txt
data/output/rssi_analysis/grouped_statistics/: grouped_statistics.csv
data/scripts/: analyze_errors_logDistance.py  analyze_location_errors.py  analyze_rssi.py  get_location_estimations.py  map.py
include/: DistanceCalculator.h  FingerprintDatabase.h  LogDistanceCalculator.h  ProgressBar.h  WiFiScanner.h  WiFiScannerFactory.h
include/distance/: DistanceCalculatorFactory.h  IDistanceCalculator.h  LogDistanceCalculator.h
include/fingerprint/: CSVDatabaseParser.h  FingerprintDatabase.h  FingerprintMatcher.h  LocationEstimator.h  RSSIData.h  RSSISimilarityCalculator.h
include/optimize/: Distance3DFunctor.h  DistanceFunctor.h  FingerprintPositionEstimator.h  IPositionEstimator.h  PositionEstimator.h
include/utility/: ConfigParser.h  IConfigParser.h  Logger.h  MathUtils.h
include/wifi/: IWiFiScanner.h  WiFiScanner.h  WiFiScannerFactory.h  WiFiScannerWithConfig.h
lib/: wifi_scan.c
src/: DistanceCalculator.cpp  DistanceCalculatorFactory.cpp  FingerprintDatabase.cpp  FingerprintMatcher.cpp  LocationEstimator.cpp  LogDistanceCalculator.cpp  Logger.cpp  ProgressBar.cpp  WiFiScanner.cpp  WiFiScannerFactory.cpp  demo_main.cpp  main.cpp  offline_main.cpp  online_main.cpp
src/distance/: DistanceCalculatorFactory.cpp  LogDistanceCalculator.cpp
src/fingerprint/: CSVDatabaseParser.cpp  FingerprintDatabase.cpp  FingerprintMatcher.cpp  LocationEstimator.cpp  RSSISimilarityCalculator.cpp
src/include/: DistanceCalculator.hpp  WiFiScanner.hpp
src/main/: config_test.cpp  demo_main.cpp  fingerprint_optimize_main.cpp  offline_main.cpp  online_main.cpp  optimize_main.cpp
src/optimize/: DistanceFunctor.cpp  FingerprintPositionEstimator.cpp  PositionEstimator.cpp
src/utility/: ConfigParser.cpp  Logger.cpp  MathUtils.cpp  ProgressBar.cpp
src/wifi/: WiFiScanner.cpp  WiFiScannerFactory.cpp  WiFiScannerWithConfig.cpp
